--- a/codejavascript/tablecustom.css
+++ b/codejavascript/tablecustom.css
@@ -1,108 +1,108 @@
-html, body{
-    background-color: aquamarine !important;
-}
+
 h2{
 	text-align: center;
 	font-weight: bold;
 }
-.container{
-    
-}
 .table{
-    width: 100% !important;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 thead tr{		
     text-align:center;
 }
 thead th{
-	font-size: 25px; 
+	font-size: 20px; 
 	border-radius: 20px 20px 0 0;
 	text-align: center;
 }
 thead th:nth-child(1){
-	line-height: 100px;
+	line-height: 50px;
 	background: #D5E0E0;
 	border: none;
 	margin-right: 10px;
 }
 thead th:nth-child(2){
-	line-height: 100px;
+	line-height: 50px;
 	background: #2bcece;
 }
 thead th:nth-child(3){
 	background: #ff9378;
-	line-height: 100px;
+	line-height: 50px;
 }
 thead th:nth-child(4){
 	background: #edc045;
-	line-height: 100px;
+	line-height: 50px;
 }
 thead th:nth-child(5){
-	line-height: 100px;
+	line-height: 50px;
 	background: #dafa28;
 }
 thead th:nth-child(6){
-	line-height: 100px;
+	line-height: 50px;
 	background:#3ae04e;
+}
+thead th:nth-child(7){
+	line-height: 50px;
+	background:#287ddd;
 }
 
 tbody tr td{
     background-color: white;
 	font-size: 20px;
-	border: 1px solid rgb(235, 25, 25);
+	border: 1px solid #788080;
+	width: 160px;
 }
 tbody tr td:nth-child(1){
     background-color: white;
 	font-size: 17px;
 	font-weight: bold;
-	line-height: 50px;
+	line-height: 20px;
     text-align: center;
 }
 tbody tr td:nth-child(2){
     background-color: white;
 	font-size: 17px;
 	font-weight: bold;
-	line-height: 50px;
+	line-height: 20px;
     text-align: center;
 }
 tbody tr td:nth-child(3){
     background-color: white;
 	font-size: 17px;
 	font-weight: bold;
-	line-height: 50px;
+	line-height: 20px;
     text-align: center;
 }
 tbody tr td:nth-child(4){
     background-color: white;
 	font-size: 17px;
 	font-weight: bold;
-	line-height: 50px;
+	line-height: 20px;
     text-align: center;
 }
 tbody tr td:nth-child(5){
     background-color: white;
 	font-size: 17px;
 	font-weight: bold;
-	line-height: 50px;
+	line-height: 20px;
     text-align: center;
 }
 tbody tr td:nth-child(6){
     background-color: white;
-	line-height: 50px;
+	line-height: 20px;
     text-align: center;
     font-size: 17px;
 	font-weight: bold;
 }
-
-
-.content-wrapper {
-    background-color: aquamarine;
+tbody tr td:nth-child(7){
+    background-color: white;
+	line-height:20px;
+    text-align: center;
+    font-size: 17px;
+	font-weight: bold;
 }
-.pagination{
-    margin: 40px;
+button{
+	left: 1800px;
 }
-
-
+ 
 
 
