--- a/codejavascript/tablecustom.css
+++ b/codejavascript/tablecustom.css
@@ -1,4 +1,6 @@
-
+body{
+	justify-content: center;
+}
 h2{
 	text-align: center;
 	font-weight: bold;
@@ -108,4 +110,12 @@ tbody tr td:nth-child(7){
 	font-weight: bold;
 }
 
-
+.dropdown{
+	position: relative;
+	background : #000;
+	border-radius: 30px;
+	box-shadow: 20px 20px 20px #d0d0d0,
+				-20px -20px 60px #ffffff;
+	transition: all 500ms ease-in-out;
+	cursor: pointer;
+}
