--- a/codejavascript/tablecustom.css
+++ b/codejavascript/tablecustom.css
@@ -60,6 +60,7 @@ tbody tr td:nth-child(1){
 	font-weight: bold;
 	line-height: 35px;
     text-align: center;
+	
 }
 tbody tr td:nth-child(2){
 	border: 1px solid #788080;
@@ -101,13 +102,29 @@ tbody tr td:nth-child(6){
     font-size: 17px;
 	font-weight: bold;
 }
-tbody tr td:nth-child(7){
-	border-top: 1px solid #788080;
-	border-bottom: 1px solid #788080;
+tbody tr td:nth-child(6){
+	border: 1px solid #788080;
+    background-color: white;
 	line-height: 35px;
     text-align: center;
     font-size: 17px;
 	font-weight: bold;
 }
-
-  
+tbody tr .tdd{
+	border: 1px solid #788080;
+    background-color: white;
+	line-height: 35px;
+    text-align: center;
+    font-size: 17px;
+	font-weight: bold;
+	color:red !important;
+}
+tbody tr td:nth-child(7){
+	border: 1px solid #788080;
+    background-color: white;
+	line-height: 35px;
+    text-align: center;
+    font-size: 17px;
+	font-weight: bold;
+}
+ 
